# Aganitha

./: .gitignore  README.md  comments.txt  pyproject.toml  results.csv
paperfetcher/: __init__.py  cli.py  core.py  models.py
tests/: sample_data.xml  test_core.py
