[tool.poetry]
name = "paperfetcher"
version = "0.1.0"
description = "A command-line tool to fetch and filter PubMed research papers for authors with pharmaceutical or biotech affiliations."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/your-username/paperfetcher"
repository = "https://github.com/your-username/paperfetcher"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.3"}
httpx = "^0.27.0"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
mypy = "^1.10.1"

[tool.poetry.scripts]
get-papers-list = "paperfetcher.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.main:api"